// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <button
    class="s-NMyTiX1zi6rz"
  >
     
    <span
      class="s-NMyTiX1zi6rz"
    >
      Default
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Disabled 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <button
    class="s-NMyTiX1zi6rz"
    disabled=""
  >
     
    <span
      class="s-NMyTiX1zi6rz"
    >
      Disabled
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Icon only 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <button
    class="iconOnly s-NMyTiX1zi6rz"
  >
    <i
      class="material-icons s-NMyTiX1zi6rz"
    >
      face
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Icon only, no color 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <button
    class="iconOnly noColor s-NMyTiX1zi6rz"
  >
    <i
      class="material-icons s-NMyTiX1zi6rz"
    >
      face
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`No color 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <button
    class="noColor s-NMyTiX1zi6rz"
  >
     
    <span
      class="s-NMyTiX1zi6rz"
    >
      Text only
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Primary 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <button
    class="primary s-NMyTiX1zi6rz"
  >
     
    <span
      class="s-NMyTiX1zi6rz"
    >
      Primary
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Primary disabled 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <button
    class="primary s-NMyTiX1zi6rz"
    disabled=""
  >
     
    <span
      class="s-NMyTiX1zi6rz"
    >
      Primary
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Primary with icon only 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <button
    class="primary iconOnly s-NMyTiX1zi6rz"
  >
    <i
      class="material-icons s-NMyTiX1zi6rz"
    >
      volume_up
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Primary with icon only, no color 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <button
    class="primary iconOnly noColor s-NMyTiX1zi6rz"
  >
    <i
      class="material-icons s-NMyTiX1zi6rz"
    >
      volume_up
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Primary with text and icon 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <button
    class="primary s-NMyTiX1zi6rz"
  >
    <i
      class="material-icons s-NMyTiX1zi6rz"
    >
      person
    </i>
     
    <span
      class="s-NMyTiX1zi6rz"
    >
      Hey!
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Text and icon 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <button
    class="s-NMyTiX1zi6rz"
  >
    <i
      class="material-icons s-NMyTiX1zi6rz"
    >
      face
    </i>
     
    <span
      class="s-NMyTiX1zi6rz"
    >
      Hello
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;
